todo-ui/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-ui-deployment
  labels:
    app: todo-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-ui
  template:
    metadata:
      labels:
        app: todo-ui
    spec:
      containers:
        - name: todo-ui
          image: alanarturohernandez/todo-ui
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
