todo-ui/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-ui
spec:
  selector:
    app: todo-ui
  ports:
    - protocol: TCP
      port: 8080
