todo-ui/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ui-ingress
spec:
  rules:
    - host: todo.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-ui
                port:
                  number: 8080
